--- a/App_LUMINOVA/templates/produccion/produccion_detalle_op.html
+++ b/App_LUMINOVA/templates/produccion/produccion_detalle_op.html
@@ -148,6 +148,18 @@
             </div>
         </div>
     </div>
+    {% if mostrar_boton_reportar %}
+    <div class="row mt-3">
+        <div class="col-lg-8"> {# O col-lg-12 si quieres que ocupe más ancho #}
+            {# Se puede alinear a la derecha de la card de gestión si se ajusta el HTML #}
+        </div>
+        <div class="col-lg-4 text-center text-lg-end"> {# Alineado con la card de gestión #}
+            <a href="{% url 'App_LUMINOVA:crear_reporte_produccion' op.id %}" class="btn btn-danger">
+                <i class="bi bi-exclamation-triangle-fill"></i> Reportar Problema con OP
+            </a>
+        </div>
+    </div>
+    {% endif %}
 </div>
 
 {# No es necesario el script para el ID del form si el botón está dentro del form #}
