--- a/App_LUMINOVA/templates/padre.html
+++ b/App_LUMINOVA/templates/padre.html
@@ -2,6 +2,7 @@
 {% load django_bootstrap5 %}
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Luminova{% endblock %}</title>
@@ -10,29 +11,39 @@
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}">
-    {% block head_extra %}{% endblock %} {# Para CSS o JS específico de una página #}
+    {% block head_extra %}{% endblock %}
 </head>
-<body class="d-flex flex-column min-vh-100 bg-light"> {# Asegura que el footer baje #}
 
-    {% include 'shared/header.html' %}
+<body>
 
-    <div class="container-fluid flex-grow-1"> {# Para que el contenido principal ocupe espacio #}
-        <div class="row">
+    <header class="site-header">
+        {% include 'shared/header.html' %}
+    </header>
+
+    {# Contenedor principal para sidebar y contenido #}
+    <div class="container-fluid content-area">
+        <div class="row"> {# La fila de Bootstrap ya es flex #}
+            {# Sidebar Column #}
             {% block sidebar_content %}
-                {# Lógica para incluir el sidebar correcto basado en request.path o un context_processor #}
-                {% include 'shared/sidebar_logic.html' %} {# Crear este archivo o poner la lógica aquí #}
+            {# Tu nav#sidebarMenu.col-md-3.col-lg-2... va aquí. QUITA vh-100 de sus clases si lo tiene #}
+            {% include 'shared/sidebar_logic.html' %}
             {% endblock %}
-            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4"> {# Añadido py-4 para padding vertical #}
-                {% bootstrap_messages %} 
+
+            {# Main Content Column #}
+            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 py-4 main-column">
+                {% bootstrap_messages %}
                 {% block content %}{% endblock %}
             </main>
         </div>
     </div>
 
-    {% include 'shared/footer.html' %}
-    
+    <footer class="site-footer">
+        {% include 'shared/footer.html' %}
+    </footer>
+
     {% bootstrap_javascript %}
-    <script src="{% static 'js/app_global.js' %}"></script> {# Un JS global si lo necesitas #}
-    {% block scripts_extra %}{% endblock %} {# Para JS específico de una página #}
+    <script src="{% static 'js/app_global.js' %}"></script>
+    {% block scripts_extra %}{% endblock %}
 </body>
+
 </html>
