--- a/App_LUMINOVA/templates/shared/header.html
+++ b/App_LUMINOVA/templates/shared/header.html
@@ -19,7 +19,7 @@
                     <li class="nav-item"><a class="nav-link text-primary fw-bold" href="{% url 'App_LUMINOVA:produccion_principal' %}">Producción</a></li>
                     <li class="nav-item"><a class="nav-link text-primary fw-bold" href="{% url 'App_LUMINOVA:ventas_lista_ov' %}">Ventas</a></li>
                     <li class="nav-item"><a class="nav-link text-primary fw-bold" href="{% url 'App_LUMINOVA:deposito_view' %}">Depósito</a></li>
-                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="#">Control de Calidad</a></li>
+                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="{% url 'App_LUMINOVA:control_calidad_view' %}">Control de Calidad</a></li>
                 </ul>
 
                 <div class="navbar-nav ms-auto align-items-center me-3 mb-2 mb-lg-0 d-flex flex-row">
