--- a/App_LUMINOVA/templates/produccion/reportes.html
+++ b/App_LUMINOVA/templates/produccion/reportes.html
@@ -65,7 +65,7 @@
                                         <p><strong>Fecha:</strong> {{ reporte_item.fecha|date:"d/m/Y H:i" }}</p>
                                         <hr>
                                         <p><strong>Descripción:</strong></p>
-                                        <p>{{ reporte_item.descripcion_problema|linebreaksbr|default:"No hay descripción." }}</p>
+                                        <p>{{ reporte_item.informe_reporte|linebreaksbr|default:"No hay descripción." }}</p>
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
