--- a/App_LUMINOVA/templates/deposito/deposito.html
+++ b/App_LUMINOVA/templates/deposito/deposito.html
@@ -192,7 +192,7 @@
                         <a href="{% url 'App_LUMINOVA:compras_seleccionar_proveedor_para_insumo' insumo_bajo_stock_item.id %}"
                             class="btn btn-sm btn-warning"
                             title="Gestionar Compra para {{ insumo_bajo_stock_item.descripcion }}">
-                            <i class="bi bi-cart-plus-fill"></i> Gestionar Compra
+                            <i class="bi bi-cart-plus-fill"></i> 
                         </a>
                         {% endif %}
                     </td>
