--- a/App_LUMINOVA/templates/produccion/produccion_lista_op.html
+++ b/App_LUMINOVA/templates/produccion/produccion_lista_op.html
@@ -18,17 +18,17 @@
 
 <div class="table-responsive mt-3">
     <table class="table table-striped table-hover align-middle">
-        <thead class="table-light">
+        <thead class="table-light ">
             <tr>
-                <th>N° OP</th>
-                <th>OV Origen</th>
-                <th>Producto a Producir</th>
-                <th class="text-center">Cantidad</th>
-                <th>Cliente Final</th>
-                <th>Fecha Solicitud</th>
-                <th>Estado Actual</th>
-                <th>Sector Asignado</th>
-                <th class="text-center">Acciones</th>
+                <th class="color-thead">N° OP</th>
+                <th class="color-thead">OV Origen</th>
+                <th class="color-thead">Producto a Producir</th>
+                <th class="color-thead text-center">Cantidad</th>
+                <th class="color-thead">Cliente Final</th>
+                <th class="color-thead">Fecha Solicitud</th>
+                <th class="color-thead">Estado Actual</th>
+                <th class="color-thead">Sector Asignado</th>
+                <th class="color-thead text-center">Acciones</th>
             </tr>
         </thead>
         <tbody>
