--- a/App_LUMINOVA/templates/produccion/reportes.html
+++ b/App_LUMINOVA/templates/produccion/reportes.html
@@ -21,13 +21,13 @@
         <table class="table table-striped table-hover">
             <thead class="color-thead"> {# Usando tu clase color-thead #}
                 <tr>
-                    <th class="align-middle">N° Reporte</th>
-                    <th class="align-middle">Fecha</th>
-                    <th class="align-middle">OP Asociada</th>
-                    <th class="align-middle">Tipo de Problema</th>
-                    <th class="align-middle">Sector Reporta</th>
-                    <th class="align-middle">Reportado Por</th>
-                    <th class="align-middle text-center">Acciones</th>
+                    <th class="align-middle color-thead">N° Reporte</th>
+                    <th class="align-middle color-thead">Fecha</th>
+                    <th class="align-middle color-thead">OP Asociada</th>
+                    <th class="align-middle color-thead">Tipo de Problema</th>
+                    <th class="align-middle color-thead">Sector Reporta</th>
+                    <th class="align-middle color-thead">Reportado Por</th>
+                    <th class="align-middle color-thead text-center">Acciones</th>
                 </tr>
             </thead>
             <tbody>
